# diffusion-models-made-easy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  train_cifar10.py
.github/ISSUE_TEMPLATE/: bug_report.md
configs/ddim/: cifar10.yaml
configs/ddpm/: cifar10.yaml  lsun_bedroom.yaml  lsun_cat.yaml  lsun_church.yaml
configs/iddpm/: cifar10.yaml
docs/: Makefile
docs/source/: callbacks.md  common.md  conf.py  data.md  data_modules.md  datamodules.md  datasets.md  diffusion_models.md  dmme.md  equations.md  index.md  index.rst  install.md  lit_modules.md  models.md  papers.md  trainer.md
docs/source/callbacks/: ema.md  generate.md
docs/source/data/: cifar10.md  datamodule.md
docs/source/data_modules/: cifar10.md  datamodule.md  lsun.md
docs/source/datamodules/: cifar10.md
docs/source/datasets/: lsun.md
docs/source/diffusion_models/: ddim.md  ddpm.md  iddpm.md
docs/source/equations/: ddim.md  ddpm.md  iddpm.md
docs/source/lit_modules/: ddim.md  ddpm.md  iddpm.md
docs/source/models/: ddpm.md  iddpm.md
docs/source/papers/: ddim.md  ddpm.md
scripts/: lit_main.py  main.py
src/dmme/: __init__.py  __main__.py  ddim.py  ddpm.py  nn.py  parsing.py  trainer.py
src/dmme/adm/: __init__.py  adm.py
src/dmme/callbacks/: __init__.py  ema.py  generate.py
src/dmme/common/: __init__.py  noise.py  norm.py  utils.py  vis.py
src/dmme/data/: __init__.py  cifar10.py  lsun.py
src/dmme/data_modules/: __init__.py  cifar10.py  dataset.py  lsun.py
src/dmme/datasets/: __init__.py  lsun.py
src/dmme/ddim/: __init__.py  ddim.py  ddim_sampler.py  lit_ddim.py  litddim.py
src/dmme/ddpm/: __init__.py  data.py  ddpm.py  ddpm_sampler.py  layers.py  lit_ddpm.py  litddpm.py  loss.py  models.py  sample.py  train.py  (+2 more)
src/dmmf/: __init__.py  trainer.py
tests/: test_adm.py  test_ddim.py  test_ddpm.py  test_guidance.py  test_iddpm.py  test_nn.py  test_unet.py
(+42 files in other folders)
