[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmme"
version = "0.0.2"
authors = [
    { name="Chanhyuk Jung", email="urw7rs@stu.kmu.ac.kr" },
]
description = "Diffusion Models Made Easy"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "torchvision",
    "einops",
]

[project.optional-dependencies]
trainer = [
    "pytorch-lightning",
    "jsonargparse[signatures]>=4.12.0",
    "torchmetrics[image]",
    "wandb",
]
tests = ["pytest"]
dev = ["black", "flake8"]

[project.urls]
"Homepage" = "https://github.com/urw7rs/diffusion-models-made-easy"
