[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmme"
version = "0.3.1"
authors = [
    { name="Chanhyuk Jung", email="urw7rs@stu.kmu.ac.kr" },
]
license = { file = "LICENSE" }
description = "Diffusion Models Made Easy"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch",
    "torchvision",
    "einops",
    "pytorch-lightning>=1.8",
    "jsonargparse[signatures]>=4.12.0",
    "torchmetrics[image]",
    "wandb",
]

[project.optional-dependencies]
tests = ["pytest"]
dev = [
    "black",
    "flake8",
    "sphinx-autobuild",
    "bumpver"
]
docs = [
    "sphinx",
    "myst_parser",
    "furo",
    "sphinxcontrib-katex",
]

[project.urls]
"Homepage" = "https://github.com/urw7rs/diffusion-models-made-easy"

[project.scripts]
"dmme.trainer" = "dmme.trainer:main"

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/dmme/__init__.py" = ["{version}"]
